[gd_scene load_steps=19 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/walk.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player/normal.png" type="Texture" id=3]
[ext_resource path="res://Characters/Player/hit.png" type="Texture" id=4]
[ext_resource path="res://Characters/Player/killed.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/attack.png" type="Texture" id=6]
[ext_resource path="res://Levels/Main/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/HUD/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/Player/Camera2D.gd" type="Script" id=9]
[ext_resource path="res://Levels/Main/Items/hat.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "killed",
"speed": 0.5
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.9106
height = 13.416

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Hat" type="Sprite" parent="AnimatedSprite"]
visible = false
position = Vector2( -4, -32 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.9106, 0.368576 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
script = ExtResource( 9 )

[node name="Center" type="Position2D" parent="."]

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Inventory" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -501.347
margin_top = -300.507
margin_right = -501.347
margin_bottom = -300.507

[node name="InventoryButton" type="Button" parent="."]
margin_left = -440.0
margin_top = -256.0
margin_right = -383.0
margin_bottom = -203.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 152.0
margin_right = 454.0
margin_bottom = 242.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="toggled" from="InventoryButton" to="." method="_on_InventoryButton_toggled"]
[connection signal="toggled" from="WeaponButton" to="." method="_on_WeaponButton_toggled"]
